--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,81 +1,136 @@
+[build-system]
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
+
 [project]
 name = "eqdsk"
-authors = [{name="The eqdsk team"}]
+dynamic = ['version']
+authors = [{ name = "The Bluemira team" }]
 description = """A reader writer and converter for the eqdsk format"""
 readme = "README.md"
+license = "LICENSE"
 requires-python = ">=3.8"
-dynamic=['version']
-classifiers=[
-        "Development Status :: 3 - Alpha",
-        "Programming Language :: Python :: 3",
-        "License :: OSI Approved :: GNU Lesser General Public License v2.1 or later (LGPLv2.1+)",
-        "Operating System :: POSIX :: Linux",
-    ]
-dependencies = [
-    "fortranformat",
-    "numpy",
+keywords = []
+classifiers = [
+  "Programming Language :: Python",
+  "Development Status :: 3 - Alpha",
+  "Natural Language :: English",
+  "Intended Audience :: Science/Research",
+  "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
+  "Operating System :: OS Independent",
+  "Topic :: Software Development :: Libraries :: Python Modules",
+  "Topic :: Scientific/Engineering :: Physics",
 ]
 
-[project.urls]
-homepage = "https://github.com/Fusion-Power-Plant-Framework/eqdsk"
-repository = "https://github.com/Fusion-Power-Plant-Framework/eqdsk"
+dependencies = ["fortranformat", "numpy"]
 
 [project.optional-dependencies]
-dev = [
-    "black",
-    "flake8",
-    "flake8-absolute-import",
-    "flake8-bandit",
-    "flake8-docstrings",
-    "pep8-naming",
-    "pre-commit",
-    "pytest",
-    "pytest-cov",
-    "pytest-html",
-    "pytest-metadata",
-    "pytest-json-report",
-    "sphinx",
-    "sphinx-autoapi",
-    "sphinx-rtd-theme",
-    "typeguard",
-    "versioneer",
+dev = ["pre-commit", "hatch"]
+
+[project.urls]
+Source = "https://github.com/Fusion-Power-Plant-Framework/eqdsk"
+Documentation = "https://github.com/Fusion-Power-Plant-Framework/eqdsk#readme"
+Issues = "https://github.com/Fusion-Power-Plant-Framework/eqdsk/issues"
+
+[tool.hatch.version]
+source = "vcs"
+[tool.hatch.build.hooks.vcs]
+version-file = "eqdsk/_version.py"
+
+# env: test
+[tool.hatch.envs.test]
+dependencies = [
+  "coverage[toml]",
+  "pytest",
+  "pytest-html",
+  "pytest-metadata",
+  "pytest-json-report",
+]
+[[tool.hatch.envs.test.matrix]]
+python = ["3.8", "3.10"]
+[tool.hatch.envs.test.scripts]
+test = "pytest {args:tests}"
+test-cov = "coverage run -m pytest {args:tests}"
+cov-report = ["- coverage combine", "coverage report"]
+cov = ["test-cov", "cov-report"]
+
+# env: docs
+[tool.hatch.envs.docs]
+dependencies = ["sphinx", "sphinx-autoapi", "sphinx-rtd-theme"]
+[tool.hatch.envs.docs.scripts]
+docs = "sphinx-build -b html docs docs/_build"
+
+# env: lint
+[tool.hatch.envs.lint]
+detached = true
+dependencies = ["black", "ruff"]
+[tool.hatch.envs.lint.scripts]
+typing = "mypy --install-types --non-interactive {args:src/eqdsk_test tests}"
+style = ["ruff {args:.}", "black --check --diff {args:.}"]
+fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
+all = ["style", "typing"]
+
+# tool: ruff
+[tool.ruff]
+line-length = 120
+preview = true
+exclude = [
+  ".git",
+  "__pycache__",
+  "documentation",
+  ".env",
+  ".idea",
+  ".pytest_cache",
+  "htmlcov",
+]
+select = ["ALL"]
+extend-select = ["E241", "CPY001", "PLR0904"]
+ignore = [
+  # Allow non-abstract empty methods in abstract base classes
+  "B027",
+  # Allow boolean positional values in function calls, like `dict.get(... True)`
+  "FBT003",
+  # Ignore checks for possible passwords
+  "S105",
+  "S106",
+  "S107",
+  # Ignore complexity
+  "C901",
+  "PLR0911",
+  "PLR0912",
+  "PLR0913",
+  "PLR0915",
+]
+unfixable = [
+  # Don't touch unused imports
+  "F401",
 ]
 
-[build-system]
-requires = ["setuptools", "versioneer[toml]>=0.26"]
-build-backend = "setuptools.build_meta"
 
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["eqdsk*"]
-exclude = ["tests*"]
+[tool.ruff.isort]
+known-first-party = ["eqdsk"]
+
+[tool.ruff.flake8-tidy-imports]
+ban-relative-imports = "all"
+
+[tool.ruff.mccabe]
+max-complexity = 20
+
+[tool.ruff.pydocstyle]
+convention = "numpy"
+
+[tool.ruff.per-file-ignores]
+# Tests can use magic values, assertions, and relative imports
+"tests/**/*" = ["PLR2004", "S101", "TID252"]
+"__init__.py" = ["F401", "F403"]
 
 [tool.black]
-line-length = 89
-include = '\.pyi?$'
-extend-exclude = '\.env'
+line-length = 120
 
 [tool.coverage.report]
-"exclude_lines" = [
-  "if __name__ == .__main__.:"
-]
-"omit" = [
-  "eqdsk/_version.py"
-]
-
-[tool.isort]
-line_length = 89
-profile = "black"
-skip_gitignore = true
-known_first_party = ["eqdsk"]
+"exclude_lines" = ["if __name__ == .__main__.:"]
+"omit" = ["eqdsk/_version.py"]
 
 [tool.pytest.ini_options]
 addopts = "--html=report.html --self-contained-html --strict-markers"
-
-[tool.versioneer]
-VCS = "git"
-style = "pep440"
-versionfile_source = "eqdsk/_version.py"
-versionfile_build = "eqdsk/_version.py"
-tag_prefix = "v"
-parentdir_prefix = "eqdsk-"
+filterwarnings = ['ignore:Matplotlib is currently using agg:UserWarning']
