--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,4 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python
 test_eqdsks
 report.html
+.hatch
