--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,27 +1,6 @@
-name: Lint and Test EQDSk
+name: Test EQDSk
 on: [push]
 jobs:
-  lint:
-    runs-on: "ubuntu-latest"
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-          cache: "pip"
-
-      - name: Install build dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install hatch
-
-      - name: Lint with ruff
-        run: hatch run lint:all
-
   test:
     strategy:
       fail-fast: false
