--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,17 +13,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-python@v4
-        with:
-          python-version: |
-            3.8
-            3.10
-          cache: "pip"
-
-      - name: Install build dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install hatch
+      - name: Setup python and Hatch
+        uses: "./.github/actions/setup-hatch"
 
       - name: Run all tests with coverage
         run: hatch run test:cov-all
