added README, changed pre-commit (removed black), ran pre-commit, setup CI for pulling secrete data, changed tests

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,5 +12,8 @@ jobs:
       - name: Setup python and Hatch
         uses: "./.github/actions/setup-hatch"
 
-      - name: Lint with ruff
+      - name: Run linting
         run: hatch run lint:all
+
+      - name: Run formatting (pre-commit)
+        run: hatch run lint:fmt
