--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -1,13 +1,22 @@
-name: Test EQDSk
+name: eqdsk - On PR
 
-on:
-  pull_request:
-  push:
-    branches:
-      - develop
-      - main
+on: [pull_request]
 
 jobs:
+  lint:
+    runs-on: "ubuntu-latest"
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup python and Hatch
+        uses: ./.github/workflows/actions/setup-hatch
+
+      - name: Run Hatch linting tasks
+        uses: ./.github/workflows/actions/hatch-lint
+
   test:
     strategy:
       fail-fast: false
