--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,22 @@
 [build-system]
-requires = ["hatchling", "hatch-vcs"]
+requires      = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
+
+[tool.hatch.version]
+source           = "vcs"
+fallback-version = "0.0.0"
+
+[tool.hatch.build.hooks.vcs]
+version-file = "eqdsk/_version.py"
 
 [project]
 name = "eqdsk"
-dynamic = ['version']
 authors = [{ name = "The Bluemira Developers" }]
 description = """A reader, writer and converter for the eqdsk format"""
+dynamic = ['version']
 readme = "README.md"
 license = "LGPL-2.1-or-later"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 keywords = ["tokamak", "cocos", "eqdsk", "GEQDSK"]
 classifiers = [
   "Programming Language :: Python",
@@ -24,6 +31,11 @@ classifiers = [
 
 dependencies = ["fortranformat", "numpy"]
 
+[project.urls]
+Source        = "https://github.com/Fusion-Power-Plant-Framework/eqdsk"
+Documentation = "https://github.com/Fusion-Power-Plant-Framework/eqdsk#readme"
+Issues        = "https://github.com/Fusion-Power-Plant-Framework/eqdsk/issues"
+
 [project.optional-dependencies]
 dev = ["pre-commit"]
 test = [
@@ -35,15 +47,6 @@ test = [
 ]
 docs = ["mkdocs-material", "mkdocstrings[python]"]
 lint = ["ruff", "mypy"]
-[project.urls]
-Source = "https://github.com/Fusion-Power-Plant-Framework/eqdsk"
-Documentation = "https://github.com/Fusion-Power-Plant-Framework/eqdsk#readme"
-Issues = "https://github.com/Fusion-Power-Plant-Framework/eqdsk/issues"
-
-[tool.hatch.version]
-source = "vcs"
-[tool.hatch.build.hooks.vcs]
-version-file = "eqdsk/_version.py"
 
 # env: default
 [tool.hatch.envs.default]
@@ -53,12 +56,12 @@ features = ["dev", "test", "docs", "lint"]
 [tool.hatch.envs.test]
 features = ["test"]
 [[tool.hatch.envs.test.matrix]]
-python = ["3.8", "3.10"]
+python = ["3.10", "3.11", "3.12"]
 [tool.hatch.envs.test.scripts]
-tests = "pytest {args:tests}"
-tests-cov = "coverage run -m pytest {args:tests}"
+tests      = "pytest {args:tests}"
+tests-cov  = "coverage run -m pytest {args:tests}"
 cov-report = ["- coverage combine", "coverage report"]
-cov-all = ["tests-cov", "cov-report"]
+cov-all    = ["tests-cov", "cov-report"]
 
 # env: docs
 [tool.hatch.envs.docs]
@@ -68,18 +71,17 @@ docs = "sphinx-build -b html docs docs/_build"
 
 # env: lint
 [tool.hatch.envs.lint]
-detached = true                               # Don't inherit from default (does not download project dependencies)
+detached     = true                           # Don't inherit from default (does not download project dependencies)
 dependencies = ["ruff", "mypy", "pre-commit"]
 [tool.hatch.envs.lint.scripts]
 typing = "mypy --install-types --non-interactive {args:src/eqdsk tests}"
-style = ["ruff {args:.}"]
-fmt = ["pre-commit run --all-files --hook-stage manual"]
-all = ["style", "typing"]
+style  = ["ruff {args:.}"]
+fmt    = ["pre-commit run --all-files --hook-stage manual"]
+all    = ["style", "typing"]
 
 # tool: ruff
 [tool.ruff]
 line-length = 80
-preview = true
 exclude = [
   ".git",
   "__pycache__",
@@ -90,8 +92,8 @@ exclude = [
   "htmlcov",
 ]
 select = ["ALL"]
-extend-select = ["E241", "CPY001", "PLR0904"]
 ignore = [
+  "D100",
   "TD003",
   "COM812",
   "ISC001",
@@ -112,8 +114,6 @@ ignore = [
   "EM102",
   # Allow non-abstract empty methods in abstract base classes
   "B027",
-  # Allow boolean positional values in function calls, like `dict.get(... True)`
-  "FBT003",
   # Ignore checks for possible passwords
   "S105",
   "S106",
@@ -145,14 +145,14 @@ convention = "google"
 
 [tool.ruff.per-file-ignores]
 # Tests can use magic values, assertions, and relative imports
-"tests/**/*" = ["PLR2004", "S101", "TID252"]
+"tests/**/*"  = ["PLR2004", "S101", "TID252"]
 "__init__.py" = ["F401", "F403"]
 
 [tool.coverage.run]
 source_pkgs = ["eqdsk", "tests"]
-branch = true
-parallel = true
-omit = ["eqdsk/_version.py"]
+branch      = true
+parallel    = true
+omit        = ["eqdsk/_version.py"]
 
 [tool.coverage.paths]
 eqdsk = ["eqdsk", "*/eqdsk"]
@@ -160,7 +160,7 @@ tests = ["tests", "*/eqdsk/tests"]
 
 [tool.coverage.report]
 exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
-"omit" = ["eqdsk/_version.py"]
+"omit"        = ["eqdsk/_version.py"]
 
 # [tool.pytest.ini_options]
 # addopts = "--html=report.html --self-contained-html --strict-markers -r fEX"
