--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           repository: "Fusion-Power-Plant-Framework/bluemira-private-data"
           ssh-key: ${{ secrets.BLUEMIRA_PRIVATE_DATA_DEPLOY_KEY }}
-          path: "./tests/test_data"
+          path: "./tests/test_data/private"
 
       - name: Run all tests with coverage
-        run: hatch run test:cov-all
+        run: hatch run test:tests-cov
