--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,11 +1,6 @@
-name: eqdsk - On push to develop/main
+name: PR Test
 
-on:
-  push:
-    branches: [develop, main]
-
-permissions:
-  contents: write
+on: [pull_request]
 
 jobs:
   lint:
@@ -41,6 +36,7 @@ jobs:
 
       - name: Checkout bluemira-private-data
         uses: actions/checkout@v4
+        if: ${{ !github.event.pull_request.head.repo.fork }}
         with:
           repository: "Fusion-Power-Plant-Framework/bluemira-private-data"
           ssh-key: ${{ secrets.BLUEMIRA_PRIVATE_DATA_DEPLOY_KEY }}
@@ -48,24 +44,3 @@ jobs:
 
       - name: Run all tests with coverage
         run: hatch run test:tests-cov
-
-  # docs:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Configure Git Credentials
-  #       run: |
-  #         git config user.name github-actions[bot]
-  #         git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-  #     - uses: actions/setup-python@v4
-  #       with:
-  #         python-version: 3.x
-  #     - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
-  #     - uses: actions/cache@v3
-  #       with:
-  #         key: mkdocs-material-${{ env.cache_id }}
-  #         path: .cache
-  #         restore-keys: |
-  #           mkdocs-material-
-  #     - run: pip install mkdocs-material
-  #     - run: mkdocs gh-deploy --force
