--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: eqdsk - push-main
+name: Main
 
 on:
   push:
-    branches: [develop, main]
+    branches: [main]
 
 permissions:
   contents: write
