updated setup python to v5, changed workflow names (#10)
* updated setup python to v5, changed workflow names

* updated names

* pypi job name

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish to PyPI
+name: Publish
 
 on:
   release:
@@ -8,7 +8,7 @@ permissions:
   contents: read
 
 jobs:
-  deploy:
+  pypi:
     runs-on: ubuntu-latest
 
     environment: release
