--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,13 +41,16 @@ jobs:
 
       - name: Checkout bluemira-private-data
         uses: actions/checkout@v4
+        if: ${{ !github.event.pull_request.head.repo.fork }}
         with:
           repository: "Fusion-Power-Plant-Framework/bluemira-private-data"
           ssh-key: ${{ secrets.BLUEMIRA_PRIVATE_DATA_DEPLOY_KEY }}
           path: "./tests/test_data/private"
 
       - name: Run all tests with coverage
-        run: hatch run test:tests-cov
+        env:
+          PRIVATE: ${{ github.event.pull_request.head.repo.fork  && 'tests-cov' || 'tests-cov-private' }}
+        run: hatch run test:${PRIVATE}
 
   # docs:
   #   runs-on: ubuntu-latest
