--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ all    = ["style", "typing"]
 [tool.ruff]
 target-version = "py310"
 line-length = 89
+output-format = "concise"
 exclude = [
   ".git",
   "__pycache__",
