--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,8 +73,8 @@ docs = "sphinx-build -b html docs docs/_build"
 detached     = true                           # Don't inherit from default (does not download project dependencies)
 dependencies = ["ruff", "mypy", "pre-commit"]
 [tool.hatch.envs.lint.scripts]
-typing = "mypy --install-types --non-interactive {args:src/eqdsk tests}"
-style  = ["ruff {args:.}"]
+typing = "mypy --install-types --non-interactive {args:eqdsk tests}"
+style  = ["ruff {args:check .}"]
 fmt    = ["pre-commit run --all-files --hook-stage manual"]
 all    = ["style", "typing"]
 
