--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ test = [
 ]
 docs = ["mkdocs-material", "mkdocstrings[python]"]
 lint = ["ruff", "mypy"]
+cli = ["matplotlib"]
 
 [project.scripts]
 eqdsk = "eqdsk.cli:cli"
@@ -80,6 +81,10 @@ typing = "mypy --install-types --non-interactive {args:eqdsk tests}"
 style  = ["ruff {args:check .}"]
 fmt    = ["pre-commit run --all-files --hook-stage manual"]
 all    = ["style", "typing"]
+
+# env: cli
+[tool.hatch.envs.cli]
+features = ["cli"]
 
 # tool: ruff
 [tool.ruff]
