Added CLI, repr and plotting routines (#26)
* added cli, repr and plotting routines for the cli

* made changes

* Apply suggestions from code review

Co-authored-by: je-cook <81617086+je-cook@users.noreply.github.com>

* added convert cli method, addressed comments

* changed missing in COCOS

* Apply suggestions from code review

Co-authored-by: je-cook <81617086+je-cook@users.noreply.github.com>

* improved test, made sure when qpsi is an array of 0's in eqdsk format, it is read as None. Modified test eqdsks to reflect full linepsace

* added -q option to convert

* Add Known COCOS help for convert

---------

Co-authored-by: je-cook <81617086+je-cook@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = [
   "Topic :: Scientific/Engineering :: Physics",
 ]
 
-dependencies = ["fortranformat", "numpy"]
+dependencies = ["fortranformat", "numpy", "click"]
 
 [project.urls]
 Source        = "https://github.com/Fusion-Power-Plant-Framework/eqdsk"
@@ -47,6 +47,10 @@ test = [
 ]
 docs = ["mkdocs-material", "mkdocstrings[python]"]
 lint = ["ruff", "mypy"]
+cli = ["matplotlib"]
+
+[project.scripts]
+eqdsk = "eqdsk.cli:cli"
 
 # env: default
 [tool.hatch.envs.default]
@@ -77,6 +81,10 @@ typing = "mypy --install-types --non-interactive {args:eqdsk tests}"
 style  = ["ruff {args:check .}"]
 fmt    = ["pre-commit run --all-files --hook-stage manual"]
 all    = ["style", "typing"]
+
+# env: cli
+[tool.hatch.envs.cli]
+features = ["cli"]
 
 # tool: ruff
 [tool.ruff]
