added doc build ci step

--- a/.github/workflows/main_and_pr.yml
+++ b/.github/workflows/main_and_pr.yml
@@ -54,23 +54,16 @@ jobs:
         env:
           PRIVATE: ${{ github.event.pull_request.head.repo.fork  && 'tests-cov' || 'tests-cov-private' }}
         run: hatch run test:${env:PRIVATE}
-  # docs:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Configure Git Credentials
-  #       run: |
-  #         git config user.name github-actions[bot]
-  #         git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-  #     - uses: actions/setup-python@v4
-  #       with:
-  #         python-version: 3.x
-  #     - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
-  #     - uses: actions/cache@v3
-  #       with:
-  #         key: mkdocs-material-${{ env.cache_id }}
-  #         path: .cache
-  #         restore-keys: |
-  #           mkdocs-material-
-  #     - run: pip install mkdocs-material
-  #     - run: mkdocs gh-deploy --force
+
+  docs-build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup python and Hatch
+        uses: "./.github/workflows/actions/setup-hatch"
+
+      - name: Build docs
+        run: hatch run docs:build
