--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -18,8 +18,8 @@ jobs:
 
       - name: Configure Git Credentials
         run: |
-          git config user.name github-actions[bot]
-          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+          git config user.email "107038218+fppf-bot@users.noreply.github.com"
+          git config user.name "fppf-bot"
 
       - name: Setup python and Hatch
         uses: Fusion-Power-Plant-Framework/fppf-actions/setup-hatch@main
